--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node meadowlark.js"
   },
   "author": "hira kumar",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express3-handlebars": "^0.5.2",
     "formidable": "^1.2.2"
+    
+  },
+  "devDependencies": {  
+   
   }
 }
